
             • the 3D plot is now produced using the package ‘plotly’
               which allows an interactive visualisation. The new plot
               type added is called ‘interactive’, the suggestion of
               the package ‘rgl’ has been removed with this change.

         • ‘plot_ViolinPlot()’

             • Fixed a bug where the function failed to get input data
               from ‘RLum.Results’ objects.

         • ‘read_BIN2R()’

             • Handling of corrupt BIN-files improved, the functions
               tries to import whatever possible,

             • the argument ‘n.records’ was not respected under rare
               circumstances,

             • in course of this (corrupt BIN-files, not respected
               ‘n.records’) the output data frame was longer than the
               list of count values; corrected,

             • in some cases the grain number was not imported
               correctly; fixed,

             • new argument ‘verbose’ added,

             • minor performance improvements.

         • ‘read_BIN2R()’

             • Behaviour while using the option ‘import = TRUE’ and
               ‘fastForward = TRUE’ have been improved. If both
               arguments are combined now only a single data frame with
               all information is returned.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • Single grain data had not been converted correctly to
               ‘RLum.Analysis’ objects.  Each grain within a position
               should represent one ‘RLum.Analysis’ object with a set
               of curve. This was so far not the case; corrected,

             • significant performance improvements, especially for big
               Risoe.BINfileData2RLum.Analysis() objects.

  Internals:

         • New internal function ‘.create_UID()’ added to create the
           unique identifier for RLum-objects. The new function reduces