@@ -1492,11 +1492,11 @@
 </td>
 <td class=cellinside><br /> Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin<br /> is constructed using a mirrored density curve. This plot is especially designed for cases<br /> where the individual errors are zero or to small to be visualised. The idea for this plot is<br /> based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.<br /> The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).<br />
 </td>
-<td class=cellinside>0.1.1
+<td class=cellinside>0.1.2
 </td>
-<td class=cellinside>2016-05-06
+<td class=cellinside>2016-05-17
 </td>
-<td class=cellinside>14:49:56
+<td class=cellinside>13:27:04
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
