@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Tue May 17 10:39:41 2016
+% Tue May 17 13:31:50 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -145,7 +145,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   76 & plot\_RLum.Results & Plot function for an RLum.Results S4 class object & $<$br /$>$ The function provides a standardised plot output for data of an RLum.Results$<$br /$>$ S4 class object$<$br /$>$ & 0.2.1 & 2016-05-16 & 22:24:15
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,$<$br /$>$ Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  77 & plot\_ViolinPlot & Create a violin plot & $<$br /$>$ Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin$<$br /$>$ is constructed using a mirrored density curve. This plot is especially designed for cases$<$br /$>$ where the individual errors are zero or to small to be visualised. The idea for this plot is$<$br /$>$ based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.$<$br /$>$ The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).$<$br /$>$ & 0.1.1 & 2016-05-06 & 14:49:56
+  77 & plot\_ViolinPlot & Create a violin plot & $<$br /$>$ Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin$<$br /$>$ is constructed using a mirrored density curve. This plot is especially designed for cases$<$br /$>$ where the individual errors are zero or to small to be visualised. The idea for this plot is$<$br /$>$ based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.$<$br /$>$ The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).$<$br /$>$ & 0.1.2 & 2016-05-17 & 13:27:04
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   78 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.12.7 & 2016-05-02 & 09:42:18
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR Freiberg, (Germany)$<$br /$>$  R Luminescence Package Team \\ 
